--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,50 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+background-color: #F3F781;
+//background-image: url("画像へのパス");
+
+#container {
+  margin: auto;
+  width: 960px;
+}
+
+#left {
+  width: 465px;
+  float: left;
+}
+
+#time {
+  height: 245px;
+  margin-bottom: 10px;
+  padding: 0.2em 0.5em;
+//  margin: 2em 0;
+  color: #565656;
+  background: #ffeaea;
+  box-shadow: 0px 0px 0px 10px #ffeaea;
+  border: dashed 2px #ffc3c3;
+  border-radius: 8px;
+  overflow: scroll;
+}
+
+#graph {
+  height: 245px;
+  background-color: red;
+}
+
+#right {
+  width: 465px;
+  height: 500px;
+  float: right;
+//  padding: 0.2em 0.5em;
+//  margin: 2em 0;
+  color: #565656;
+  background: #d6ebff;
+  box-shadow: 0px 0px 0px 10px #d6ebff;
+  border: dashed 2px #74c1f8;
+  border-radius: 8px;
+}
+
+}
