--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,24 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<body>
+<h1>イノシシ検知</h1>
+
+  <div id="container">
+
+    <div id="left">
+      <div id = "time">
+        2018年2月25日11時：3件 / A：2件 B：1件<br>
+      </div>
+
+      <div id = "graph">
+
+      </div>
+
+    </div>
+
+    <div id="right">
+
+    </div>
+
+  </div>
+
+
+</body>
